Fix readonly visibility

--- a/assets/css/components/space/space-nav.scss
+++ b/assets/css/components/space/space-nav.scss
@@ -21,6 +21,10 @@
     color: rgba($component-active-color, .8);
   }
 
+  a[disabled] {
+    opacity: .4;
+  }
+
   &.active {
     a {
       color: $accent;
